--- a/assignment.css
+++ b/assignment.css
@@ -3,6 +3,24 @@
     padding: 0;
 }
 
+/* hr{
+
+    top: 15px;
+    margin-bottom: 10px;
+    height: 5px;
+    color: #B0B5B3;
+} */
+hr {
+    position: relative;
+    top: 20px;
+    border: none;
+    height: 5px;
+    background: #B0B5B3;
+    margin-bottom: 30px;
+    width: 90%;
+}
+
+
 .grid{
     display: grid;
     grid-template-columns: 15fr 80fr;
@@ -11,8 +29,10 @@
 }
 
 header{
-    display: flex;
-    padding: 15px;
+    display: inline-block;
+    vertical-align: middle;
+    text-align: center;
+    padding: 35px;
     grid-column-start: 1;
     grid-column: span 3;
     border-bottom: 5px solid black;
@@ -21,19 +41,88 @@ header{
     font-size: 24pt;
     font-weight: bold;
 }
+
 footer{
     background-color: rgb(65, 134, 201);
     grid-column: span 2;
 }
 
-
+form{
+    padding-top: 10px;
+}
 
 .sidebar {
-    border-right: 3px solid #693f7e;
-    background-color: black;
-
+    border-right: 3px solid #B0B5B3;
+    background-color: white;
+    padding-left: 10px;
+    position: sticky;
 }
 
 .photo-container{
-    background-color: beige;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: center;
+    background-color: #DBDBDB;
+    padding: auto;
+}
+
+
+
+.filter select{
+    width: 90%;
+}
+.filter input{
+    width: 90%;
+}
+
+.stat-circle{
+    position: absolute;
+    top: 190px;
+    right: 10px;
+    width: 20px;
+    height: 20px;
+    border: 10px white;
+    border-radius: 50%;
+}
+
+.card{
+    /* display: flex; */
+    /* flex-wrap: wrap; */
+    position: relative;
+    background-color: white;
+    margin-bottom: 10%;
+    max-width: 250px;
+    margin: 10px;
+    border-radius: 15px;
+
+}
+
+.card-image{
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    
+
+}
+
+.card p{
+    font-size: 90%;
+    padding-left: 10px;
+}
+
+.card h2{
+    padding-left: 10px;
+}
+
+.tl{
+    position: absolute;
+    top: 8px;
+    left: 10px;
+    color: wheat;
+}
+.bl{
+    position: absolute;
+    top: 180px;
+    color: wheat;
+    font-size: 80%;
 }
