--- a/assignment.css
+++ b/assignment.css
@@ -2,14 +2,10 @@
     margin: 0;
     padding: 0;
 }
-
-/* hr{
-
-    top: 15px;
-    margin-bottom: 10px;
-    height: 5px;
-    color: #B0B5B3;
-} */
+    
+    
+    
+    
 hr {
     position: relative;
     top: 20px;
@@ -19,15 +15,17 @@ hr {
     margin-bottom: 30px;
     width: 90%;
 }
-
-
+    
+    
+    
+    
 .grid{
     display: grid;
     grid-template-columns: 15fr 80fr;
-    grid-template-rows: 100px 1fr 100px;
-    height: 100vh;
+    grid-template-rows: 100px 1fr;
 }
-
+    
+    
 header{
     display: inline-block;
     vertical-align: middle;
@@ -35,29 +33,27 @@ header{
     padding: 35px;
     grid-column-start: 1;
     grid-column: span 3;
-    border-bottom: 5px solid black;
     background-color: rgb(65, 134, 201);
     color: white;
     font-size: 24pt;
     font-weight: bold;
 }
+    
 
-footer{
-    background-color: rgb(65, 134, 201);
-    grid-column: span 2;
-}
-
+    
 form{
     padding-top: 10px;
 }
-
+    
+    
 .sidebar {
     border-right: 3px solid #B0B5B3;
     background-color: white;
     padding-left: 10px;
     position: sticky;
 }
-
+    
+    
 .photo-container{
     display: flex;
     flex-wrap: wrap;
@@ -65,17 +61,37 @@ form{
     align-content: center;
     background-color: #DBDBDB;
     padding: auto;
+    overflow: auto;
 }
-
-
-
+    
+    
+#status_key{
+    position: relative;
+}
+    
+    
+    
+    
 .filter select{
     width: 90%;
 }
+
 .filter input{
     width: 90%;
 }
 
+#status_key{
+    position: relative;
+}
+.stat-circle-bar{
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    margin-right: 2px;
+    display: inline-block;
+}
+    
+    
 .stat-circle{
     position: absolute;
     top: 190px;
@@ -85,41 +101,55 @@ form{
     border: 10px white;
     border-radius: 50%;
 }
-
+    
+    
 .card{
-    /* display: flex; */
-    /* flex-wrap: wrap; */
     position: relative;
     background-color: white;
     margin-bottom: 10%;
     max-width: 250px;
     margin: 10px;
     border-radius: 15px;
-
+    cursor: pointer;
+    transition: transform 0.5s;
 }
 
+    
+    
+.card:hover{
+    transform: scale(1.2);
+    z-index: 1;
+}
+    
+    
+    
+    
+    
+    
 .card-image{
     border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    
-
+    border-top-right-radius: 10px;    
 }
-
+    
+    
 .card p{
     font-size: 90%;
     padding-left: 10px;
 }
-
+    
+    
 .card h2{
     padding-left: 10px;
 }
-
+    
+    
 .tl{
     position: absolute;
     top: 8px;
     left: 10px;
     color: wheat;
 }
+
 .bl{
     position: absolute;
     top: 180px;
